tests/parse_print/random_perturb/set01/delete-09/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/random_perturb/set01/delete-09/delete-09.essence:1:10:
language name has to be Essence, but given: Essnce
    language Essnce 1.3
             ^